inserção dos primeiros animais (testes com transition e flip com css)

--- a/index.html
+++ b/index.html
@@ -39,9 +39,48 @@
 			</ul>
 		</nav>
 	</header>
-	<div>
+	<main>
+		<div id="caixa1">
+			<div class="flipcard">
+				<div class="conteudodedentro">
+					<div class="conteudodafrente">
+						<img title="logo adote aqui" src="dog.jpg"> </img>
+					</div>
 
-	</div>
+					<div class="conteudodetras">
+						<h3>CACHORRO</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+							delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+							dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="caixa2">
+			<div class="flipcard">
+				<div class="conteudodedentro">
+					<div class="conteudodafrente">
+						<img title="logo adote aqui" src="cat.jpg"> </img>
+					</div>
+				<div class="conteudodetras">
+					<h3>gato</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+						delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+						dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+
+				</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</main>
+	<footer>
+		<span data-descr="aplicação de pseudo classes e pseudo elementos">
+			<h4>Todos os direitos reservados </h4>
+			<h5>By: Jessica Cintra</h5>
+		</span>
+	</footer>
 </body>
 
 </html>
