--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Jessica Cintra">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/responsivo.css">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<title>Adote aqui</title>
+	<link rel="icon" href="image/Adote aqui.svg" type="image/x-icon">
+
 
 
 </head>
@@ -17,7 +22,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<img title="logo adote aqui" src="Adote aqui.svg"> </img>
+			<img title="logo adote aqui" src="./image/Adote aqui.svg" alt="logo adote aqui"> </img>
 		</div>
 		<nav class="navbar">
 			<ul>
@@ -40,46 +45,82 @@
 		</nav>
 	</header>
 	<main>
-		<div id="caixa1">
-			<div class="flipcard">
-				<div class="conteudodedentro">
-					<div class="conteudodafrente">
-						<img title="logo adote aqui" src="dog.jpg"> </img>
-					</div>
+		<section class="bloco1">
+			<div id="caixa1">
+				<div class="flipcard">
+					<div class="conteudodedentro">
+						<div class="conteudodafrente">
+							<img title="image dog" src="./image/dog.jpg" alt="imagem de um cachorro"> </img>
+						</div>
 
-					<div class="conteudodetras">
-						<h3>CACHORRO</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
-							delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
-							dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+						<div class="conteudodetras">
+							<h3>Cachorro</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+								delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+								dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div id="caixa2">
-			<div class="flipcard">
-				<div class="conteudodedentro">
-					<div class="conteudodafrente">
-						<img title="logo adote aqui" src="cat.jpg"> </img>
-					</div>
-				<div class="conteudodetras">
-					<h3>gato</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
-						delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
-						dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+			<div id="caixa2">
+				<div class="flipcard">
+					<div class="conteudodedentro">
+						<div class="conteudodafrente">
+							<img title="image cat" src="./image/cat.jpg" alt="imagem de um gato"> </img>
+						</div>
 
-				</div>
+
+						<div class="conteudodetras">
+							<h3>Gato</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+								delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+								dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
+		<section class="bloco2">
+			<div id="caixa3">
+				<div class="flipcard">
+					<div class="conteudodedentro">
+						<div class="conteudodafrente">
+							<img title="image cat" src="./image/canelinha.jpeg" alt="imagem de um gato"> </img>
+						</div>
+						<div class="conteudodetras">
+							<h3>Pássaro</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+								delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+								dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="caixa4">
+				<div class="flipcard">
+					<div class="conteudodedentro">
+						<div class="conteudodafrente">
+							<img title="image cat" src="./image/turtle.jpg" alt="imagem de um gato"> </img>
+						</div>
+						<div class="conteudodetras">
+							<h3>Tartaruga</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, animi saepe expedita
+								delectus recusandae voluptatibus a neque rem eveniet iusto corrupti, consequuntur omnis
+								dolor nisi accusamus qui, similique necessitatibus repellendus?</p>
+
+						</div>
+					</div>
+				</div>
+			</div>
 
 	</main>
 	<footer>
-		<span data-descr="aplicação de pseudo classes e pseudo elementos">
-			<h4>Todos os direitos reservados </h4>
-			<h5>By: Jessica Cintra</h5>
-		</span>
+
+		<h4>Todos os direitos reservados </h4>
+		<h5>By: Jessica Cintra</h5>
+
 	</footer>
 </body>
 
